--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -705,7 +705,7 @@
     }
 
     function getGrList(school_id, num) {
-      grMap = {};
+      gradeMap = {};
 
       let reqData = {
         grade_name: '',
