--- a/src/layuiadmin/style/dialog.css
+++ b/src/layuiadmin/style/dialog.css
@@ -122,3 +122,31 @@
 .dialog-box .dialog-article #dialog-detai-table .article {
     padding: 0 10px;
 }
+
+.dialog-box .dialog-article.mine {
+    width: 300px;
+    height: 300px;
+    min-width: 200px;
+    min-height: 200px;
+}
+
+.dialog-box .dialog-article.mine .type-box {
+    width: 100%;
+    height: calc(100% - 100px);
+    overflow: auto;
+    box-sizing: border-box;
+    font-size: 16px;
+    padding: 15px;
+}
+
+.dialog-box .dialog-article.mine .type-box .row {
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.dialog-box .dialog-article.mine .bootom-btn-box {
+    padding: 5px;
+    display: flex;
+    justify-content: flex-end;
+    border-top: 1px solid #f2f2f2;
+}
