--- a/src/views/wx/manage.html
+++ b/src/views/wx/manage.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="../../layuiadmin/style/admin.css">
   <link rel="stylesheet" href="../../layuiadmin/style/wx.css">
   <link rel="stylesheet" href="../../layuiadmin/style/formBox.css">
+  <link rel="stylesheet" href="../../layuiadmin/style/dialog.css">
   <link rel="stylesheet" href="../../layuiadmin/style/table.css">
 </head>
 
@@ -46,6 +47,18 @@
           <label class="layui-form-label">公开ID</label>
           <div class="layui-input-block">
             <input type="text" name="wxid" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">商户号</label>
+          <div class="layui-input-block">
+            <input type="text" name="mchid" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">支付方式</label>
+          <div class="layui-input-block" onclick="handlePayType()">
+            <input type="text" name="payType" placeholder="请输入" autocomplete="off" class="layui-input" disabled>
           </div>
         </div>
         <div class="layui-form-item input-box">
@@ -84,6 +97,18 @@
           </div>
         </div>
         <div class="layui-form-item input-box">
+          <label class="layui-form-label">商户号</label>
+          <div class="layui-input-block">
+            <input type="text" name="mchid" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
+          <label class="layui-form-label">支付方式</label>
+          <div class="layui-input-block">
+            <input type="text" name="payType" placeholder="请输入" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item input-box">
           <label class="layui-form-label">Token</label>
           <div class="layui-input-block">
             <input type="text" name="token" placeholder="请输入" autocomplete="off" class="layui-input">
@@ -114,6 +139,26 @@
         <div id="page-box"></div>
       </div>
     </div>
+    <div id="dialog-box" class="dialog-box">
+      <div id="dialog-article" class="dialog-article mine">
+        <div class="header">
+          <div class="title">缴费方式选择</div>
+          <div onclick="closeDialog()"><i class="layui-icon layui-icon-close"></i></div>
+        </div>
+        <div class="type-box layui-form" lay-filter="payType">
+          <div class="row">
+            <input type="checkbox" name="" title="微信" lay-skin="primary">
+          </div>
+          <div class="row">
+            <input type="checkbox" name="" title="支付宝" lay-skin="primary">
+          </div>
+          <div class="row">
+            <input type="checkbox" name="" title="农行" lay-skin="primary">
+          </div>
+        </div>
+        <div class="bootom-btn-box"><button class="layui-btn" onclick="">确定</button></div>
+      </div>
+    </div>
   </div>
 
   <script src="../../layuiadmin/modules/api.js"></script>
@@ -138,9 +183,11 @@
         , cols: [[ //表头
           { checkbox: true, width: "5%" }
           , { field: 'id', title: 'ID', width: "5%" }
-          , { field: 'school', title: '绑定机构', width: "30%" }
-          , { field: 'wxid', title: '公开ID', width: "30%" }
-          , { field: 'token', title: 'Token', width: "30%" }
+          , { field: 'school', title: '绑定机构', width: "20%" }
+          , { field: 'wxid', title: '公开ID', width: "20%" }
+          , { field: 'mchid', title: '商户号', width: "15%" }
+          , { field: 'pay_type', title: '支付方式', width: "15%" }
+          , { field: 'token', title: 'Token', width: "20%" }
         ]]
       });
     })
@@ -190,9 +237,11 @@
               , cols: [[ //表头
                 { checkbox: true, width: "5%" }
                 , { field: 'id', title: 'ID', width: "5%" }
-                , { field: 'school', title: '绑定机构', width: "30%" }
-                , { field: 'wxid', title: '公开ID', width: "30%" }
-                , { field: 'token', title: 'Token', width: "30%" }
+                , { field: 'school', title: '绑定机构', width: "20%" }
+                , { field: 'wxid', title: '公开ID', width: "20%" }
+                , { field: 'mchid', title: '商户号', width: "15%" }
+                , { field: 'pay_type', title: '支付方式', width: "15%" }
+                , { field: 'token', title: 'Token', width: "20%" }
               ]]
             });
 
@@ -267,6 +316,7 @@
   <script src="../../layuiadmin/modules/delete.js"></script>
   <script src="../../layuiadmin/modules/search.js"></script>
   <script src="../../layuiadmin/modules/change.js"></script>
+  <script src="../../layuiadmin/modules/dialog.js"></script>
 </body>
 
 
