change icon and name of wxManage in index

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -102,7 +102,7 @@
             </li>
             <li data-name="template" class="layui-nav-item">
               <a href="javascript:;" lay-tips="缴费管理" lay-direction="2">
-                <i class="layui-icon layui-icon-form"></i>
+                <i class="layui-icon layui-icon-rmb"></i>
                 <cite>缴费管理</cite>
               </a>
               <dl class="layui-nav-child">
@@ -129,9 +129,9 @@
               </dl>
             </li>
             <li data-name="template" class="layui-nav-item">
-              <a href="javascript:;" lay-href="wx/manage.html" lay-tips="微信管理" lay-direction="2">
-                <i class="layui-icon layui-icon-login-wechat" style="color: rgba(255,255,255,.7);"></i>
-                <cite>微信管理</cite>
+              <a href="javascript:;" lay-href="wx/manage.html" lay-tips="商户管理" lay-direction="2">
+                <i class="layui-icon layui-icon-form" ></i>
+                <cite>商户管理</cite>
               </a>
             </li>
             <li data-name="template" class="layui-nav-item">
