--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -354,7 +354,9 @@
                 gradename: item.grade_name,
                 grade: item.grade_id,
                 sum: item.amt,
-                detail: item.remark
+                detail: item.remark,
+                list_name: item.list_name,
+                list_amt: item.list_amt
               };
 
               tabData.push(one);
